# community-scripts

./: .editorconfig  .env.example  .gitattributes  README.md  environment.yml  poetry.toml  pyproject.toml  test.py  virtual-packages.yml
hf_community_scripts/: utils.py
hf_community_scripts/diffusers/loaders/: sdxl_loader.py
tests/: conftest.py  test_onnx.py  test_tensorflow.py  test_xformers.py
tests/diffusers/: test_diffuser_pipelines.py
tests/general/: test_onnx.py  test_pytorch.py  test_xformers.py
